<resources>
    <string name="app_name">Karrefú</string>
    <string name="title_products">Productos</string>
    <string name="title_cart">Carrito</string>
    <string name="title_buys">Historial</string>
    <string name="title_add_product">Añadir productos</string>
    <string name="settings">Ajustes</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_text">Escribe el nombre del cliente:</string>
    <string name="register_user">Iniciar sesión</string>
    <string name="invalid_user_name">El nombre de usuario que introdujiste no es válido</string>
    <string name="incorrect_admin_password">La contraseña de administrador que introdujiste es incorrecta</string>
    <string name="connectivity_error">Error de conexión</string>
    <string name="write_password">Escribe tu contraseña:</string>
    <string name="create_password">Crea una contraseña:</string>
    <string name="password_hint">Escribe aquí tu contraseña</string>
    <string name="create_password_button">Guardar contraseña</string>
    <string name="write_password_button">Comprobar contraseña</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="purchase_saved_succesfully">Compra guardada</string>
    <string name="empty_shopping_cart">El carrito está vacío</string>
    <string name="change_product">Cambiar producto</string>
    <string name="change_product_menu_bar">Cambiar producto: </string>
    <string name="add_to_cart_menu_bar">Añadir al carrito: </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="content_description_show_shopping_cart_options">Abrir opciones para el carrito de la compra</string>
    <string name="content_description_save_purchase">Guardar compra en la base de datos</string>
    <string name="save_purchase">Guardar compra</string>
    <string name="empty_purchase">Vaciar compra</string>
    <string name="total_price">Precio total:</string>
    <string name="no_purchase_history">No has realizado niguna compra</string>
    <string name="client">Cliente:</string>
    <string name="purchase_num">Compra Nª: %d</string>
    <string name="purchase_date">Fecha de la compra:</string>
    <string name="error_occured">Ocurrió un error</string>
    <string name="name">Nombre:</string>
    <string name="image">Imagen:</string>
    <string name="price">Precio:</string>
    <string name="category">Categoría:</string>
    <string name="select_image">Seleccionar imagen</string>
    <string name="upload_product">Subir producto</string>
    <string name="product_save">Producto guardado</string>
    <string name="image_saved">Imagen guardada</string>
    <string name="product_not_save">Producto no guardado</string>
    <string name="image_not_saved">Imagen no guardada</string>
    <string name="empty_fields">Campos vacíos</string>
    <string name="error">Error</string>
    <string name="theme">Tema:</string>
    <string name="empty_username">Usuario vacío</string>
    <string name="empty_password">Contraseña vacía</string>
    <string-array name="themes">
        <item>Dispositivo</item>
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string name="shared_preferences_key">4b2c3564-f6f7-4837-83da-33a9f1efcfbf</string>
    <string name="theme_shared_preferences_key">1674597a-8ec0-48b9-adb2-4420fdbfae6</string>
    <string name="product_parcelable_key">c8117227-4702-4f62-bf1e-ba339e6e12e</string>
    <string name="amount_parcelable_key">331844e4-a47d-4013-84d2-e4a1d8b3a4ad</string>
    <string name="position_parcelable_key">7d4e2a97-95cd-47e5-bd01-2b4107d84def</string>
    <string name="purchase_parcelable_key">a819f7e7-aa9b-48c2-96f8-a475f5820152</string>
    <string name="show_back_parcelable_key">9f1bf559-1fa6-475b-90a2-000c8f7fe0ca</string>
</resources>