<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.cart.ShoppingCartFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".92"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/grid_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".87"
        />
    <GridView
        android:id="@+id/shopping_cart_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        android:numColumns="auto_fit"
        />
    <TextView
        android:id="@+id/shopping_cart_list_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_shopping_cart_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_show_shopping_cart_options"
        app:layout_constraintBottom_toBottomOf="@id/grid_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="17dp"
        app:srcCompat="@drawable/sort_up_solid"
        app:fabSize="normal"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_save_purchase"
        app:layout_constraintBottom_toTopOf="@id/show_shopping_cart_actions"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="17dp"
        app:srcCompat="@drawable/plus_solid"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/save_shopping_cart_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/save_shopping_cart"
        app:layout_constraintBottom_toBottomOf="@id/save_shopping_cart"
        app:layout_constraintEnd_toStartOf="@id/save_shopping_cart"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="17dp"
        android:text="@string/save_purchase"
        android:textSize="17sp"
        android:textColor="?attr/colorOnContainer"
        android:visibility="invisible"
        android:background="?attr/colorTertiary"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_save_purchase"
        app:layout_constraintBottom_toTopOf="@id/save_shopping_cart"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="17dp"
        app:srcCompat="@drawable/trash_solid"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/delete_shopping_cart_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/delete_shopping_cart"
        app:layout_constraintBottom_toBottomOf="@id/delete_shopping_cart"
        app:layout_constraintEnd_toStartOf="@id/delete_shopping_cart"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="17dp"
        android:text="@string/empty_purchase"
        android:textSize="17sp"
        android:textColor="?attr/colorOnContainer"
        android:background="?attr/colorTertiary"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/total_price_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/grid_bottom"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/total_price_field"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/total_price"
        android:textSize="25sp"
        android:background="?attr/colorTertiary"
        />
    <TextView
        android:id="@+id/total_price_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/grid_bottom"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintStart_toEndOf="@id/total_price_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="?attr/colorTertiary"
        />

</androidx.constraintlayout.widget.ConstraintLayout>