<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kinire.proyectointegrador.android.ui.activities.AddProductActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/products_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/products_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/products_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/products_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"
        />
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/products_top"
        app:layout_constraintBottom_toTopOf="@id/product_name"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        />
    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/product_image"
        app:layout_constraintBottom_toTopOf="@id/product_category"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/product_category"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintBottom_toTopOf="@id/product_price"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/product_price"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/product_category"
        app:layout_constraintBottom_toTopOf="@id/minus_button"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="14sp"
        />
    <Button
        android:id="@+id/minus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintBottom_toTopOf="@id/product_amount"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toStartOf="@id/product_amount"
        android:layout_marginVertical="15dp"
        />
    <EditText
        android:id="@+id/product_amount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintBottom_toTopOf="@id/add_products_button"
        app:layout_constraintStart_toEndOf="@id/minus_button"
        app:layout_constraintEnd_toStartOf="@id/plus_button"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="none"
        android:gravity="center"
        />
    <Button
        android:id="@+id/plus_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        app:layout_constraintBottom_toTopOf="@id/add_products_button"
        app:layout_constraintStart_toEndOf="@id/product_amount"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        android:layout_marginVertical="15dp"
        />
    <Button
        android:id="@+id/add_products_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        app:layout_constraintTop_toBottomOf="@id/plus_button"
        app:layout_constraintBottom_toBottomOf="@id/products_bottom"
        app:layout_constraintStart_toStartOf="@id/products_start"
        app:layout_constraintEnd_toEndOf="@id/products_end"
        />



</androidx.constraintlayout.widget.ConstraintLayout>